# libgsf

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  conanfile.txt  config.status  gsf.txt  psf.txt
VBA/: Util.cpp  memgzio.c  psftag.c
cmake/: libgsfConfig.cmake.in
include/: gsf.h
libresample-0.1.3/tests/: compareresample  resample-sndfile  testresample
old/: main.c
playgsf-src/VBA/: GBA.cpp  GBA.h  Sound.cpp  Sound.h  System.h  Util.cpp  memgzio.h
src/: allocation.hpp  config.h  example.c  example_sdl.c  gsf.cpp  gsf.h  libgsf.cpp  libgsf.h  linuxmain.cpp  loadpic.cpp  loadpic.h  resource.h  string.hpp
src/VBA/: Util.cpp  psftag.c  snd_interp.cpp  snd_interp.h
testfiles/: 04_Overworld.minigsf
